-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.0
-
None
-
90c09c65f (master)
- Open Git Blame for a file
- Click one of the commit hashes
- Show is opened, the content is filled quite quickly, but there are longer tasks that determine the branches and tags that include this change. Only after everything is done, the editor jumps to the current file.
- This is also annoying on Git Show without context. If you scroll down before the tags/branches are done, the editor jumps back to the top surprisingly.
Jumping to the context file should be done right after the content is set, and it should not wait for the other tasks.
For Gerrit Dashboard: QTCREATORBUG-29081 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
473823,1 | DiffEditor: Jump to context file on show as soon as possible | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
473974,5 | DiffEditor: Fix jumping to context line immediately on git show | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |